[gd_scene load_steps=11 format=3 uid="uid://ci7ueo06f24k3"]

[ext_resource type="Script" uid="uid://cil0o87dsb7q4" path="res://sources/menus/settings/teacher_settings.gd" id="1_ojivk"]
[ext_resource type="PackedScene" uid="uid://wdjp1sv55q4f" path="res://sources/menus/components/night_sky/night_sky.tscn" id="1_v06h8"]
[ext_resource type="Texture2D" uid="uid://wtx3wqs0l4si" path="res://assets/minigames/minigame_ui/graphic/button_back_up.png" id="3_hvu1i"]
[ext_resource type="Texture2D" uid="uid://cbhip35yyqneg" path="res://assets/minigames/minigame_ui/graphic/button_back_down.png" id="4_045cm"]
[ext_resource type="Texture2D" uid="uid://tcapan0mj64o" path="res://assets/minigames/minigame_ui/graphic/button_back_disabled.png" id="5_e3piv"]
[ext_resource type="PackedScene" uid="uid://bo7rpk4gebh24" path="res://sources/menus/settings/sound_settings_button.tscn" id="6_s8nbl"]
[ext_resource type="PackedScene" uid="uid://bhdh5xfyauss0" path="res://sources/ui/popup.tscn" id="7_jetb7"]
[ext_resource type="Theme" uid="uid://dqjvrt5nrtwn1" path="res://resources/themes/kalulu_theme.tres" id="8_7h0sa"]
[ext_resource type="PackedScene" uid="uid://qsvbq6ruc44v" path="res://sources/menus/settings/lesson_unlocks.tscn" id="9_mljfd"]
[ext_resource type="PackedScene" uid="uid://dhowigt8un22u" path="res://sources/ui/loading_popup.tscn" id="10_i488h"]

[node name="TeacherSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ojivk")

[node name="Background" parent="." instance=ExtResource("1_v06h8")]
layout_mode = 1

[node name="InterfaceLeft" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 450.0
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Container" type="VBoxContainer" parent="InterfaceLeft"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="TextureButton" parent="InterfaceLeft/Container"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_hvu1i")
texture_pressed = ExtResource("4_045cm")
texture_disabled = ExtResource("5_e3piv")
stretch_mode = 4

[node name="VolumeContainer" type="MarginContainer" parent="InterfaceLeft/Container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 75

[node name="VolumeButton" parent="InterfaceLeft/Container/VolumeContainer" instance=ExtResource("6_s8nbl")]
layout_mode = 2

[node name="Dashboard" type="Button" parent="InterfaceLeft/Container"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
text = "DASHBOARD"

[node name="SynchronizeButton" type="Button" parent="InterfaceLeft/Container"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
text = "SYNCHRONIZE_ACCOUNT"

[node name="DeleteButton" type="Button" parent="InterfaceLeft/Container"]
layout_mode = 2
theme_type_variation = &"DangerButton"
theme_override_font_sizes/font_size = 40
text = "DELETE_ACCOUNT"

[node name="DeletePopup" parent="InterfaceLeft/Container/DeleteButton" instance=ExtResource("7_jetb7")]
unique_name_in_owner = true
visible = false
content_text = "Voulez-vous vraiment supprimer votre compte ?
Cette action est irr√©versible !"

[node name="LogoutButton" type="Button" parent="InterfaceLeft/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "LOGOUT"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1970, 1800)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -632.0
grow_horizontal = 0
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AccountTypeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("8_7h0sa")
theme_override_font_sizes/font_size = 70
text = "ACCOUNT_TYPE"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="AccountTypeOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("8_7h0sa")
theme_override_font_sizes/font_size = 70
item_count = 2
popup/item_0/text = "TEACHER"
popup/item_0/id = 0
popup/item_1/text = "PARENT"
popup/item_1/id = 1

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="EducationMethodeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("8_7h0sa")
theme_override_font_sizes/font_size = 70
text = "EDUCATION_METHOD"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="EducationMethodOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("8_7h0sa")
theme_override_font_sizes/font_size = 70
item_count = 2
popup/item_0/text = "METHOD_APP_ONLY"
popup/item_0/id = 0
popup/item_1/text = "METHOD_COMPLETE"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="DevicesTabContainer" type="TabContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="InterfaceBottom" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Container" type="HBoxContainer" parent="VBoxContainer/InterfaceBottom"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 2

[node name="AddStudentButton" type="Button" parent="VBoxContainer/InterfaceBottom/Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("8_7h0sa")
theme_override_font_sizes/font_size = 70
text = "SETTINGS_ADD_STUDENT"

[node name="AddDeviceButton" type="Button" parent="VBoxContainer/InterfaceBottom/Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("8_7h0sa")
theme_override_font_sizes/font_size = 70
text = "SETTINGS_ADD_DEVICE"

[node name="LabelInternetMandatory" type="Label" parent="VBoxContainer/InterfaceBottom/Container"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("8_7h0sa")
theme_override_font_sizes/font_size = 60
text = "SETTINGS_INTERNET_MANDATORY_TO_ADD_STUDENT"

[node name="LessonUnlocks" parent="." instance=ExtResource("9_mljfd")]
visible = false
layout_mode = 1

[node name="AddStudentPopup" parent="." instance=ExtResource("7_jetb7")]
unique_name_in_owner = true
visible = false
content_text = "ADD_STUDENT_POPUP"

[node name="AddDevicePopup" parent="." instance=ExtResource("7_jetb7")]
unique_name_in_owner = true
visible = false
content_text = "ADD_DEVICE_POPUP"

[node name="DeleteStudentPopup" parent="." instance=ExtResource("7_jetb7")]
unique_name_in_owner = true
visible = false
content_text = "DELETE_STUDENT_POPUP"

[node name="LoadingPopup" parent="." instance=ExtResource("10_i488h")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="InterfaceLeft/Container/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="InterfaceLeft/Container/Dashboard" to="." method="_on_dashboard_button_pressed"]
[connection signal="pressed" from="InterfaceLeft/Container/SynchronizeButton" to="." method="_on_synchronize_button_pressed"]
[connection signal="pressed" from="InterfaceLeft/Container/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="accepted" from="InterfaceLeft/Container/DeleteButton/DeletePopup" to="." method="_on_delete_popup_accepted"]
[connection signal="pressed" from="InterfaceLeft/Container/LogoutButton" to="." method="_on_logout_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/AccountTypeOptionButton" to="." method="_on_account_type_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/EducationMethodOptionButton" to="." method="_on_education_method_option_button_item_selected"]
[connection signal="tab_changed" from="VBoxContainer/DevicesTabContainer" to="." method="_on_devices_tab_container_tab_changed"]
[connection signal="pressed" from="VBoxContainer/InterfaceBottom/Container/AddStudentButton" to="." method="_on_add_student_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InterfaceBottom/Container/AddDeviceButton" to="." method="_on_add_device_button_pressed"]
[connection signal="student_deleted" from="LessonUnlocks" to="." method="_on_lesson_unlocks_student_deleted"]
[connection signal="accepted" from="AddStudentPopup" to="." method="_on_add_student_popup_accepted"]
[connection signal="accepted" from="AddDevicePopup" to="." method="_on_add_device_popup_accepted"]
[connection signal="accepted" from="DeleteStudentPopup" to="." method="_on_delete_student_popup_accepted"]
[connection signal="cancel" from="LoadingPopup" to="." method="_on_loading_popup_cancel"]
[connection signal="ok" from="LoadingPopup" to="." method="_on_loading_popup_ok"]
